2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
	Implement 'file volumes' command using the JDK 1.2
	method File.listRoots(). Reflection is used to preserve
	backward compatibility with JDK 1.1 systems. Fixed
	number of args check so that 'file volumes' can be run.

2002-04-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/EncodingCmd.java: Map the
	Tcl "identity" encoding to "UTF8" in Java. While
	this does not pass all the Tcl identity
	encoding tests, it does pass quite a few.
	* tests/tcl/utf.test: Add encoding command
	tests from Tcl 8.3.

2002-04-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Build demo binaries in a directory
	named bdemo. Build test binaries in a directory
	named btest. This will keep the make clean rule
	from removing the source files when configure
	is run in the src directory. Don't set auto_path
	when running Jacl since it is not required.

2002-01-22  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (getChanType, getRefCount,
	getBufferedInput, getBufferedOutput, isBlocked,
	isBgFlushScheduled, inputSawCR): Add placeholder methods
	for properties queried by the testchannel command.
	* src/jacl/tcl/lang/FblockedCmd.java (cmdProc):
	Call placeholder isBlocked method of Channel class.
	* src/jacl/tcl/lang/FileChannel.java (getChanType):
	Add implementation of abstract getChanType method.
	* src/jacl/tcl/lang/ServerSocketChannel.java (getChanType):
	Add implementation of abstract getChanType method.
	* src/jacl/tcl/lang/SocketChannel.java (getChanType):
	Add implementation of abstract getChanType method.
	* src/jacl/tcl/lang/StdChannel.java (open, getChanType):
	Add implementation of abstract getChanType method.
	Set correct default buffering mode for stdchannels so
	that the testchannel command return proper values.
	* src/tests/jacl/tcl/lang/JavaTestExtension.java (init)